--- a/_config.yml
+++ b/_config.yml
@@ -3,33 +3,33 @@ title: 张敏
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: N35N
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc: JAVA 工程师
 url: "http://www.n35n.com"
 
 # Comment
 comment:
     # disqus: leopard
-    duoshuo: leopard 
+    # duoshuo: leopard 
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    # weibo: 5366874726 
+    github: zm47726151
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 47726151@qq.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+    # id: 8ba1c6be0953b6f9c2ba38e57f615421  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
 ga:
-    id: UA-84134159-3   
-    host: auto  
+    # id: UA-84134159-3   
+    # host: auto  
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
